--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+config/local.json
 
 # Created by https://www.gitignore.io/api/node,linux,macos,windows,intellij+all
 # Edit at https://www.gitignore.io/?templates=node,linux,macos,windows,intellij+all
