--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Andreas Rutz <andreas.rutz@posteo.de>",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.382.0",
     "config": "^3.0.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
