--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "config": "^3.0.1",
+    "js-sha256": "^0.9.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "telegraf": "^3.25.5"
